--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -8,6 +8,9 @@
 html {
   width: 100%;
   height: 100%;
+}
+
+body {
   font-family: Ubuntu, serif;
 }
 
